fix text-overflow css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -125,6 +125,25 @@ border-radius(2 px)
     text-align: left;
 }
 
+.p-text-overflow {
+    letter-spacing: 1px;
+    line-height: 1px;
+    padding-top: 15px;
+     /*width:150px;*/
+     text-overflow: ellipsis;
+     overflow: hidden;
+     white-space: nowrap;
+    /*padding: 0;*/
+    margin: 0;
+    margin-top: -5px;
+    margin-bottom: -10px;
+    font-size: 13px;
+    /*font-weight: 10px;*/
+    color: #b3b3b3;
+    height: 2.4em;
+    text-align: left;
+}
+
 .show-last-loading-time {
     letter-spacing: 1px;
     line-height: 1px;
